# ldmx-dimuon

./: .bash_aliases  .gitignore  CMakeLists.txt  README.md  analysis.py  calib-hunk.py  calib-target-ana.ipynb  confirm-production-location.ipynb  dask-position.py  detector.gdml  eot.py  example-read.ipynb  fire  hexbin.ipynb  position.py  requirements.txt  runtime.py  target_mumu.py  true-muons.ipynb  upldmx.py
.denv/: config  requirements.txt
ana/: dimuon.py
app/: gen-samples  simulate.cxx
ldmx/: README.md  calib-hunk.py  example-read.ipynb  target_mumu.py  true-muons.ipynb  upldmx.py
outside-ldmx-sw/: .gitignore  README.md  justfile
outside-ldmx-sw/.denv/: config
outside-ldmx-sw/ana/: .gitignore  dimuon.py
outside-ldmx-sw/app/: gen-samples  xsec_calc.cxx
outside-ldmx-sw/src/: GammaPhysics.cxx  GammaPhysics.h  Hunk.h  LinkDef.h  MuonConversionBiasing.cxx  Particle.cxx  PersistParticles.h  RunHeader.cxx  RunHeader.h  ScoringPlaneSD.h
production/: README.md  config-calib-target.py  config-physics-target-no-beam-smear.py
production/.denv/: config
src/: Beam.cxx  Beam.h  GammaPhysics.cxx  GammaPhysics.h  Hunk.cxx  Hunk.h  LinkDef.h  MuonConversionBiasing.h  Particle.cxx  Particle.h  PersistParticles.cxx  PersistParticles.h  RunHeader.cxx  RunHeader.h  ScoringPlaneHit.cxx  ScoringPlaneHit.h  ScoringPlaneSD.cxx  Version.h.in
